--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -58,11 +58,11 @@ hr.star-primary:after {
 }
 
 hr.star-light {
-    border-color: #fff;
+    border-color: #{{ site.color.light }};
 }
 
 hr.star-light:after {
-    color: #fff;
+    color: #{{ site.color.light }};
     background-color: #{{ site.color.primary }};
 }
 
@@ -72,6 +72,7 @@ hr.star-primary {
 
 hr.star-primary:after {
     color: #{{ site.color.secondary }};
+    border-color: #{{ site.color.light }};
     background-color: #fff;
 }
 
@@ -81,18 +82,34 @@ hr.star-primary:after {
 
 header {
     text-align: center;
-    color: #fff;
+    color: #{{ site.color.light }};
     background: #{{ site.color.primary }};
 }
 
 header .container {
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 50px;
 }
 
-header img {
-    display: block;
-    margin: 0 auto 20px;
+header .logo {
+    margin: inherit;
+    margin-left: 30%;
+    margin-bottom: -10px;
+    max-width: 100px;
+}
+
+@media(min-width:768px) {
+    header .logo {
+        margin-left: 110px;
+        max-width: 200px;
+        margin-bottom: -30px;
+    }
+}
+
+@media(min-width:1200px) {
+    header .logo {
+        margin-left: 210px;
+    }
 }
 
 header .intro-text .name {
@@ -110,7 +127,6 @@ header .intro-text .skills {
 
 @media(min-width:768px) {
     header .container {
-        padding-top: 200px;
         padding-bottom: 100px;
     }
 
@@ -180,7 +196,7 @@ section h2 {
 }
 
 section.success {
-    color: #fff;
+    color: #{{ site.color.light }};
     background: #{{ site.color.primary }};
 }
 
@@ -192,6 +208,10 @@ section.success {
     section.first {
         padding-top: 75px;
     }
+}
+
+#portfolio {
+  border-top: 7px solid;
 }
 
 #portfolio .portfolio-item {
@@ -211,7 +231,7 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba({{ site.color.primary-rgb }},.9);
+    background: rgba(200, 200, 200,.9);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -326,11 +346,21 @@ form .row:first-child .floating-label-form-group {
 }
 
 footer {
-    color: #fff;
+    color: #{{ site.color.light }};
 }
 
 footer h3 {
     margin-bottom: 30px;
+}
+
+footer a {
+    color: #{{ site.color.light }};
+    text-decoration: underline;
+}
+
+footer a:hover {
+    color: #{{ site.color.light }};
+    text-decoration: none;
 }
 
 footer .footer-above {
@@ -344,7 +374,7 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #{{ site.color.secondary-dark }};
+    background-color: #{{ site.color.dark }};
 }
 
 .btn-social {
@@ -385,6 +415,13 @@ footer .footer-below {
     outline: 0;
 }
 
+@media(min-width:767px) {
+    .portfolio-modal {
+        width: 90%;
+        margin: auto;
+    }
+}
+
 .portfolio-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
@@ -407,6 +444,30 @@ footer .footer-below {
 
 .portfolio-modal .modal-content .item-details {
     margin: 30px 0;
+}
+
+.portfolio-modal .modal-content .screenshots {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-bottom: 70px;
+}
+
+.portfolio-modal .modal-content .screenshots .screenshot {
+    max-height: 150px;
+    margin: 5px;
+}
+
+.portfolio-modal .modal-content .screenshots .screenshot:hover {
+    opacity: 0.8;
+}
+
+.portfolio-modal .modal-content .play-now {
+    display: block;
+    width: 220px;
+    margin: 40px auto;
+    padding: 10px 0px;
+    font-size: 25px;
 }
 
 .portfolio-modal .close-modal {
@@ -445,7 +506,7 @@ footer .footer-below {
 }
 
 .navbar-nav>.active>a {
-    background-color: #{{ site.color.secondary-dark }} !important;
+    background-color: #{{ site.color.dark }} !important;
 }
 
 /* Fix modal mouse wheel issues */
