--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,16 +3,10 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>{{ site.footer.location }}</h3>
-                        <p>
-                            {% for adress in site.address %}
-                                {{ adress.line }} <br>
-		                    {% endfor %}
-                        </p>
+                    <div class="footer-col col-md-4 col-md-offset-2">
+                        <p>I am a software engineer with a background in film production and story-telling.  I make games for fun on the side.</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>{{ site.footer.social }}</h3>
                         <ul class="list-inline">
                             {% for network in site.social %}
                             <li>
@@ -21,10 +15,6 @@
 		                    {% endfor %}
                         </ul>
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3>{{ site.footer.credits }}</h3>
-                        <p>{{ site.credits }}</p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -32,7 +22,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; {{ site.footer.copyright }} 20{{ site.time | date: '%y' }}
+                        Copyright &copy; 20{{ site.time | date: '%y' }}
                     </div>
                 </div>
             </div>
