--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,7 +8,7 @@
                         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    {{ post.title }}
                                 </div>
                             </div>
                             <img src="img/portfolio/{{ post.modal-id }}/{{ post.featured }}" class="img-responsive" alt="{{ post.alt }}">
