--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,7 +3,8 @@
     <section id="portfolio">
         <div class="container">
             <div class="row">
-                {% for post in site.posts %}
+                {% assign ordered_posts = site.posts | sort:"order" %}
+                {% for post in ordered_posts %}
                     <div class="col-sm-4 portfolio-item">
                         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
