make close button stay on screen

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -415,6 +415,10 @@ footer .footer-below {
     outline: 0;
 }
 
+.portfolio-modal {
+  overflow-y: hidden !important;
+}
+
 @media(min-width:767px) {
     .portfolio-modal {
         width: 90%;
@@ -424,8 +428,9 @@ footer .footer-below {
 }
 
 .portfolio-modal .modal-content {
+    overflow-y: auto;
     padding: 60px 0;
-    min-height: 100%;
+    height: 100%;
     border: 0;
     border-radius: 0;
     text-align: center;
@@ -484,10 +489,11 @@ footer .footer-below {
     position: absolute;
     top: 25px;
     right: 25px;
-    width: 75px;
-    height: 75px;
+    width: 45px;
+    height: 45px;
     background-color: transparent;
     cursor: pointer;
+    z-index: 2;
 }
 
 .portfolio-modal .close-modal:hover {
@@ -497,7 +503,7 @@ footer .footer-below {
 .portfolio-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
-    height: 75px;
+    height: 45px;
     margin-left: 35px;
     background-color: #{{ site.color.secondary }};
     -webkit-transform: rotate(45deg);
@@ -508,7 +514,7 @@ footer .footer-below {
 .portfolio-modal .close-modal .lr .rl {
     z-index: 1052;
     width: 1px;
-    height: 75px;
+    height: 45px;
     background-color: #{{ site.color.secondary }};
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
