remove references to juggle and tweak style

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                  I am a software engineer with a degree in film production.  I make games for fun on the side.
+                    I am a software engineer with a degree in film production.  I make games for fun on the side.  I also make the <a href="http://elmnarrativeengine.com/">Elm Narrative Engine</a>.
                 </div>
             </div>
         </div>
