--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4 col-md-offset-2">
-                        <p>I am a software engineer with a background in film production and story-telling.  I make games for fun on the side.</p>
+                        <p> I am a software engineer with a degree in film production.  I make games for fun on the side.  I also make the <a href="http://elmnarrativeengine.com/">Elm Narrative Engine</a>.</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <ul class="list-inline">
