--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -449,6 +449,7 @@ footer .footer-below {
 
 .portfolio-modal .modal-content {
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 60px 0;
     height: 100%;
     border: 0;
